Fix overflow issue in feature section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,7 @@ nav {
 .feature__content {
     padding: 2rem;
     position: absolute;
-    z-index: 10;
+    z-index: 9;
     display: flex;
     flex-direction: column;
     gap: 20px;
